--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "iview",
+  "name": "iview-brainkit",
   "version": "2.8.0",
-  "title": "iView",
+  "title": "form iView for custom build",
   "description": "A high quality  UI components Library with Vue.js",
   "homepage": "http://www.iviewui.com",
   "keywords": [
@@ -32,12 +32,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/iview/iview"
+    "url": "https://github.com/syrex88/iview"
   },
   "author": "Aresn",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/iview/iview/issues"
+    "url": "https://github.com/syrex88/iview/issues"
   },
   "dependencies": {
     "async-validator": "^1.8.2",
